apps/web-giddh/src/app/reports/components/report-table-components/report.table.component.scss
@import "../../../../assets/css/color.scss";
.flex-fill {
    flex: 1 1 auto;
}
.basic > tbody > tr:hover td > a {
    color: $midnight-blue;
}
.basic > tbody > tr > td,
.basic > thead > tr > th,
.basic > tfoot > tr > th {
    white-space: nowrap !important;
}
.width-200px {
    width: 200px;
}
.bgChange {
    background: $white-smoke;
}
.btn-sort {
    display: flex !important;
    width: 36px;
    height: 36px;
    background-color: $white;
    font-size: 18px;
    color: $midnight-blue !important;
    border: 1px solid $gainsboro;
    justify-content: center;
    align-items: center;
}
.basic > tbody > tr td:first-child,
.basic > thead > tr th:first-child {
    border-bottom: 0px;
}
.btn-sort i {
    display: block;
    width: 100%;
    height: 100%;
    text-align: center;
    line-height: 35px;
}

@media screen and (max-width: 768px) {
    .table-responsive {
        .giddh-table.on-mobile-view {
            tr {
                td {
                    white-space: normal !important;
                    word-break: break-word;
                }
            }
        }
    }
}

@media (min-width: 769px){
    .table-responsive{
        max-height: calc(100vh - 200px);
        overflow-y: auto;
    }
}

